--- a/app/views/templates/interval-set.html
+++ b/app/views/templates/interval-set.html
@@ -6,7 +6,7 @@
       </div>
       <div class="countdown">
           <div class="countdown-bar" ng-style="{bottom: 101-((interval.remainingTime/interval.duration)*100) +'%'}"></div>
-          <a class="time" href="/#/settime">{{interval.remainingTime}} : {{activeDuration}}</a>
+          <a class="time" href="/#/settime">{{interval.remainingTime}} : {{time}} {{activeDuration}}</a>
       </div>
   </div>
 
